--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+
+# suppress inspection "UnusedProperty" for whole file
+spring.config.import=file:env.properties
+server.port=8080
+
+#DATABASE
+
+spring.datasource.url=jdbc:mysql://localhost/${DB_DATABASE}?useSSL=false
+spring.datasource.dbname=${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
