--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# JWT
+security.jwt.secret=asfewqfewasgfq342fd2
+security.jwt.issuer=Main
+# ex: security.jwt.ttlMillis=hours * 360000
+security.jwt.ttlMillis=604800000
+
 
 
